--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ incoming/uwa/.DS_Store
 incoming/uwa/oi/.DS_Store
 incoming/wamsi/.DS_Store
 incoming/wamsi/wwmsp5/.DS_Store
+.DS_Store
+incoming/.DS_Store
