added bom & wir bore data

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ incoming/wamsi/.DS_Store
 incoming/wamsi/wwmsp5/.DS_Store
 .DS_Store
 incoming/.DS_Store
+incoming/bom/ngis/timeseriesData/level_WA.csv
