--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ data-lake/wamsi/wwmsp5/.DS_Store
 data-lake/.DS_Store
 data-lake/bom/ngis/timeseriesData/level_WA.csv
 data-lake/wamsi/wwmsp5/Pressure
+code/import/wamsi_theme5/theme5.mat
