--- a/.github/workflows/runscript.yml
+++ b/.github/workflows/runscript.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run script
         uses: matlab-actions/run-command@v1
         with:
-          command: code/actions/test
+          command: addpath('code'), test
