cleaning working tree

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,20 @@ code/import/TransportS3BucketIntoDataLake/CredsFile.py
 ._*
 data-mapping/*
 *.pyc
+code/actions/FullRUN3(MARVL).txt
+code/actions/FullRUN3(MARVL2).txt
+code/actions/FullRUN4(SIMPLEPLOTS).txt
+code/actions/FullRUN4(SIMPLEPLOTS2).txt
+code/actions/FullRUN6(IMOSwithoutSRSAndNasaMARVL).txt
+code/actions/FullRUN7(IMOSwithoutSRSAndNasaMARVL).txt
+code/actions/FullRUN8(ALLMARVL).txt
+code/actions/FullRUN9(LiterallyEverything).txt
+code/actions/FullRUN10(LiterallyEverythingAfterFreeze).txt
+code/actions/FullRUNPythonMatfilecreation.txt
+code/actions/FullRUNPythonParqMatcreation.txt
+code/actions/IMOSXPl3s.txt
+code/actions/IMOSXPmodis.txt
+code/actions/IMOSXPoc3.txt
+code/actions/MemeoryTrack.txt
+code/actions/WarehouseDebuggingSummary.mat
+code/actions/FullRUN2(JustMatfileAndParquet).txt
