--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,18 @@ code/actions/IMOSXPoc3.txt
 code/actions/MemeoryTrack.txt
 code/actions/WarehouseDebuggingSummary.mat
 code/actions/FullRUN2(JustMatfileAndParquet).txt
+code/actions/UpdateingBOMIDYandWWMSP1WRF.txt
+code/actions/Monitorlog.log
+code/actions/MonitoredPipelineRun/MonitoredFullRUN.txt
+code/actions/MonitoredPipelineRun/MonitoredFullRUN2.txt
+code/actions/MonitoredPipelineRun/MonitoredFullRUN3.txt
+code/actions/MonitoredPipelineRun/MonitoredMatlab(4).txt
+code/actions/MonitoredPipelineRun/MonitoredMatlab(5StartOver).txt
+code/actions/MonitoredPipelineRun/TailOfLog.log
+code/actions/MonitoredPipelineRun/toplog.log
+code/actions/MonitoredPipelineRun/MemoryTrack.log
+code/actions/MonitoredPipelineRun/Details
+code/actions/MonitoredPipelineRun/MemoryTrack.log
+code/actions/MonitoredPipelineRun/TailOfLog.log
+code/actions/MonitoredPipelineRun/MemoryTrack.log
+code/actions/MonitoredPipelineRun/TailOfLog.log
