Updateing Documentation and Also running Marvl for all data (not just old tfv sheet)

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,9 @@ code/actions/MonitoredPipelineRun/MemoryTrack.log
 code/actions/MonitoredPipelineRun/TailOfLog.log
 code/actions/MonitoredPipelineRun/MemoryTrack.log
 code/actions/MonitoredPipelineRun/TailOfLog.log
+code/actions/MonitoredPipelineRun/MonitoredMatlab(6JustMatfilesWithNewAdditions).txt
+code/actions/MonitoredPipelineRun/MonitoredMatlab(7JustMARVL).txt
+code/actions/MonitoredPipelineRun/MonitoredMatlab(8UpdateingWWMSP3SedData_SMD_Matfiles_Marvl).txt
+code/actions/MonitoredPipelineRun/TailOfLog.log
+code/actions/MonitoredPipelineRun/toplog.lg
+code/actions/marvl_information.m
