Being explicit with the regexprep calls, using escape characters, and where apropriate not using a regex replace using a normal replace.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ code/actions/MonitoredPipelineRun/MonitoredMatlab(8UpdateingWWMSP3SedData_SMD_Ma
 code/actions/MonitoredPipelineRun/TailOfLog.log
 code/actions/MonitoredPipelineRun/toplog.lg
 code/actions/marvl_information.m
+code/actions/MonitoredPipelineRun/*
